[gd_scene load_steps=18 format=2]

[ext_resource path="res://groundtextest.tscn" type="PackedScene" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pause.gd" type="Script" id=3]
[ext_resource path="res://spawn.gd" type="Script" id=4]
[ext_resource path="res://stairs.tscn" type="PackedScene" id=5]
[ext_resource path="res://uitheme.tres" type="Theme" id=6]
[ext_resource path="res://audio/1L.ogg" type="AudioStream" id=7]
[ext_resource path="res://audio/1R.ogg" type="AudioStream" id=8]
[ext_resource path="res://audio/2L.ogg" type="AudioStream" id=9]
[ext_resource path="res://audio/2R.ogg" type="AudioStream" id=10]
[ext_resource path="res://vultures.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="CubeMesh" id=4]

[sub_resource type="CubeMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 10.0
emission_operator = 0
emission_on_uv2 = true

[node name="World" type="Spatial"]
pause_mode = 1
script = ExtResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.766044, 0.642788, 0, -0.642788, -0.766044, 0, 0, 0 )
light_energy = 2.55
shadow_enabled = true
directional_shadow_normal_bias = 1.07
directional_shadow_max_distance = 259.4

[node name="Ground" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.068, -95.98, -52.502 )

[node name="Pause" type="Node2D" parent="."]
pause_mode = 2
visible = false
position = Vector2( 640, 360 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="Pause"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseMenu" type="ColorRect" parent="Pause/Control"]
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
color = Color( 0, 0, 0, 0.882353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionsButton" type="Button" parent="Pause/Control/pauseMenu"]
margin_top = 90.0
margin_right = 200.0
margin_bottom = 110.0
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "OPTIONS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitButton" type="Button" parent="Pause/Control/pauseMenu"]
margin_top = 150.0
margin_right = 200.0
margin_bottom = 170.0
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "EXIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resumeButton" type="Button" parent="Pause/Control/pauseMenu"]
margin_top = 30.0
margin_right = 200.0
margin_bottom = 50.0
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "RESUME"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionsMenu" type="ColorRect" parent="Pause/Control"]
visible = false
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
color = Color( 0, 0, 0, 0.882353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="Button" parent="Pause/Control/optionsMenu"]
margin_top = 150.0
margin_right = 200.0
margin_bottom = 170.0
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="Pause/Control/optionsMenu"]
margin_left = 130.0
margin_top = 87.0
margin_right = 194.0
margin_bottom = 116.479
step = 0.1
value = 15.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause/Control/optionsMenu"]
margin_left = 10.0
margin_top = 94.0
margin_right = 40.0
margin_bottom = 14.0
text = "MOUSE SENSITIVITY:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Pause/Control/optionsMenu"]
margin_left = 10.0
margin_top = 33.0
margin_right = 38.0
margin_bottom = 14.0
text = "MASTER VOLUME:"

[node name="SpinBox2" type="SpinBox" parent="Pause/Control/optionsMenu"]
margin_left = 130.0
margin_top = 26.0
margin_right = 194.0
margin_bottom = 55.0
value = 100.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rigidbodytest" type="Spatial" parent="."]
visible = false

[node name="RigidBody5" type="RigidBody" parent="rigidbodytest"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.26112, 0 )
mass = 0.17

[node name="CollisionShape" type="CollisionShape" parent="rigidbodytest/RigidBody5"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="rigidbodytest/RigidBody5"]
mesh = SubResource( 4 )
material/0 = null

[node name="RigidBody4" type="RigidBody" parent="rigidbodytest"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.47287, 0 )
mass = 0.17

[node name="CollisionShape" type="CollisionShape" parent="rigidbodytest/RigidBody4"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="rigidbodytest/RigidBody4"]
mesh = SubResource( 4 )
material/0 = null

[node name="RigidBody3" type="RigidBody" parent="rigidbodytest"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.05474, 0 )
mass = 0.17

[node name="CollisionShape" type="CollisionShape" parent="rigidbodytest/RigidBody3"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="rigidbodytest/RigidBody3"]
mesh = SubResource( 4 )
material/0 = null

[node name="RigidBody2" type="RigidBody" parent="rigidbodytest"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.78327, 0 )
mass = 0.17

[node name="CollisionShape" type="CollisionShape" parent="rigidbodytest/RigidBody2"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="rigidbodytest/RigidBody2"]
mesh = SubResource( 4 )
material/0 = null

[node name="RigidBody" type="RigidBody" parent="rigidbodytest"]
mass = 0.17

[node name="CollisionShape" type="CollisionShape" parent="rigidbodytest/RigidBody"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="rigidbodytest/RigidBody"]
mesh = SubResource( 4 )
material/0 = null

[node name="Spawn" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0691425, -95.9459, -52.5221 )

[node name="Spawn2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.069, -1800, -52.522 )

[node name="stairs" parent="." instance=ExtResource( 5 )]
transform = Transform( -0.713527, 0.0412086, 0.699414, 0.19382, 0.97092, 0.140526, -0.673284, 0.23583, -0.700765, -311.469, -13.3156, 652.954 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1148.57, -26.3309, -653.047 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1490.68, 73.3516, 0 )
stream = ExtResource( 7 )
attenuation_model = 1
unit_db = -1.0
unit_size = 25.0

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.388673, 1864.78 )
stream = ExtResource( 8 )
attenuation_model = 1
unit_db = -1.0
unit_size = 25.0

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1560.21, 0.388673, 0 )
stream = ExtResource( 9 )
attenuation_model = 1
unit_db = -1.0
unit_size = 25.0

[node name="AudioStreamPlayer3D4" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.388673, -1631.47 )
stream = ExtResource( 10 )
attenuation_model = 1
unit_db = -1.0
unit_size = 25.0

[node name="vultures" parent="." instance=ExtResource( 11 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0.0396423, 47.7409, -52.0041 )

[connection signal="pressed" from="Pause/Control/pauseMenu/optionsButton" to="Pause" method="_on_Button2_pressed"]
[connection signal="pressed" from="Pause/Control/pauseMenu/exitButton" to="Pause" method="_on_Button_pressed"]
[connection signal="pressed" from="Pause/Control/pauseMenu/resumeButton" to="Pause" method="_on_resumeButton_pressed"]
[connection signal="pressed" from="Pause/Control/optionsMenu/backButton" to="Pause" method="_on_backButton_pressed"]
[connection signal="value_changed" from="Pause/Control/optionsMenu/SpinBox" to="Player" method="_on_SpinBox_value_changed"]
[connection signal="value_changed" from="Pause/Control/optionsMenu/SpinBox2" to="Player" method="_on_SpinBox2_value_changed"]
